--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,3 @@
 <h1>Bail Reform at Berkeley</h1>
 <button type="button">Apply for Bail</button>
-<button type="button">Donate</button>
+<%= button_to "Donate", new_donation_path, method: :get %>
