--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,9 @@
+
 <h1>Bail Reform at Berkeley</h1>
-<button type="button">Apply for Bail</button>
-<%= button_to "Donate", new_donation_path, method: :get %>
+<div>
+  <div class="container">
+    <button type="button">Apply for Bail</button>
+    <%= button_to "Donate", new_donation_path, method: :get %>
+  </div>
+  <%= image_tag("HomePageBailReformLogo.png",  :size => "300x200", :alt => "bailreform logo") %>
+</div>
