Added homepage logo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,6 @@
 <h1>Bail Reform at Berkeley</h1>
-<button type="button">Apply for Bail</button>
-<%= button_to "Donate", new_donation_path, method: :get %>
+<div class="DonateAndApplyContainer">
+  <button type="button">Apply for Bail</button>
+  <%= button_to "Donate", new_donation_path, method: :get %>
+</div>
+<%= image_tag("HomePageBailReformLogo.png",  :size => "300x200", :alt => "homepage logo") %>
