--- a/app/views/home/faq.html.erb
+++ b/app/views/home/faq.html.erb
@@ -1,1 +1,5 @@
-this is a faq
+<div class="navigationBar">
+  <% @nav_links.each do |name, link| %>
+    <%= link_to name, link, method: :get %>
+  <% end %>
+</div>
