Button disabled when no amount entered (#10)

--- a/app/views/donate/new.html.erb
+++ b/app/views/donate/new.html.erb
@@ -10,7 +10,7 @@
             <input id="amount" name="amount" type="text" maxlength="15" />
         </div>
     </p>
-    <button id="customButton">Pay with Card</button>
+    <button id="customButton" disabled>Pay with Card</button>
 </form>
 
 <script>
@@ -23,8 +23,10 @@
 
             var selection = window.getSelection().toString();
             if ( selection !== '' ) {
+                $('#customButton').prop('disabled', true);
                 return;
             }
+            //up, down, left, right
             if ( $.inArray( event.keyCode, [38,40,37,39] ) !== -1 ) {
                 return;
             }
@@ -32,10 +34,15 @@
             var $this = $( this );
             var input = $this.val();
             var input = input.replace(/[\D\s\._\-]+/g, "");
-                    input = input ? parseInt( input, 10 ) : 0;
-                    $this.val( function() {
-                        return ( input === 0 ) ? "" : input.toLocaleString( "en-US" );
-                    } );
+            input = input ? parseInt( input, 10 ) : 0;
+            if ( input === 0 ) {
+              $('#customButton').prop('disabled', true);
+            } else {
+              $('#customButton').prop('disabled', false);
+            }
+            $this.val( function() {
+                return ( input === 0 ) ? "" : input.toLocaleString( "en-US" );
+            } );
         } );
     });
 })(jQuery);
