Make home page look nice (#23)

--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -1,2 +1,53 @@
-<h1>Bail Reform at Berkeley</h1>
-<%= image_tag("HomePageBailReformLogo.png",  :size => "300x200", :alt => "homepage logo") %>
+<div id="backgroundImage">
+  <div class="parallax background">
+    <div class="title">
+      <h1 class="maintitle yellowFont">Freedom Shouldn't Be For Sale</h1>
+      <hr class="yellowFont">
+      <p class="subtitle yellowFont">We bail people out of jail for free, check out team member Thomas Brown's Op<div class="content-wrapper">
+    </div>
+  </div>
+</div>
+
+<div id="content-wrapper">
+  <div class="details container">
+    <div class="overlay">
+      <h1 class="blackFont">The system of cash bail is broken</h1>
+      <div class="yellowBox">
+      </div>
+    </div>
+    <div>
+      <p class="blackFont">Do you have $10,000?</p>
+      <p class="blackFont">□ Yes</p>
+      <p class="blackFont">□ No</p>
+    </div>
+  </div>
+
+  <div class="details container">
+    <div class="overlay">
+      <h1 class="blackFont">The United States treats poverty as a crime</h1>
+      <div class="yellowBox">
+      </div>
+    </div>
+    <div>
+      <%= image_tag "piechart.png", :class => 'piechart'%>
+      <p class="blackFont">99% of total jail growth from 1999 to 2014 was in the detention of the legally innocent</p>
+    </div>
+  </div>
+
+  <div class="details container">
+    <div class="overlay">
+      <h1 class="blackFont">Our Mission:</h1>
+      <div class="yellowBox">
+      </div>
+    </div>
+    <div>
+      <p class="blackFont"><mark>Mitigate racial bias</mark> in pretrial decision making.</p>
+      <p class="blackFont">Create an <mark>equitable justice system</mark> that doesn't discriminate against anyone.</p>
+    </div>
+  </div>
+</div>
+
+<div id="disclaimer">
+<h3>DISCLAIMER</h3>
+<p>We are a student group acting independently of the University of California. We take full responsibility for our organization and this website.</p>
+</div>
