--- a/app/assets/stylesheets/info.scss
+++ b/app/assets/stylesheets/info.scss
@@ -5,3 +5,134 @@
   display: flex;
   flex-direction: row;
 }
+
+.parallax {
+  background-image: url("https://images.unsplash.com/photo-1493836692373-ad82dc8644c3");
+  height: 700px;
+  width: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.background {
+  width: 100%;
+  right: 0;
+  top: 0;
+  left: 0;
+  z-index:-1;
+}
+
+.maintitle {
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 0;
+  font-size: 6vw;
+}
+
+.subtitle {
+  text-align: center;
+  font-weight: bold;
+  font-size: 3.2vw;
+}
+
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, 25%);
+  width: 80%;
+  background-color: hsla(0, 0%, -100%, 0.5);
+}
+
+hr {
+  display: block;
+  margin-left: 10%;
+  margin-right: 10%;
+  border-style: solid;
+  border-width: 1px;
+}
+
+.details>div>h1 {
+  font-weight: bold;
+  font-size: 5vw;
+  text-align: left;
+  margin-bottom: 0;
+  margin-block-start: 0em;
+  margin-left: 0.5em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  max-width: 7.5em;
+}
+
+.details>div>p {
+  font-weight: bold;
+  font-size: 2.5vw;
+  text-align: left;
+  margin-bottom: 2em;
+  margin-block-start: 0em;
+  margin-left: 1em;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  align-content: space-around;
+  margin-bottom: 2em;
+}
+
+.piechart {
+  width: 60%;
+}
+
+.yellowBox {
+  background-color: #ffcc00;
+  width: 100%;
+  height: 50%;
+  z-index:-1;
+  position: absolute;
+  bottom: 0;
+}
+
+.overlay {
+  display: grid;
+  position:relative;
+}
+
+#content-wrapper {
+    border-bottom: 1px solid lightgrey;
+    width: 90%;
+    transform: translate(5%, 0%);
+}
+
+#disclaimer {
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 1024px) {
+  .maintitle {
+     font-size: 61.44px;
+  }
+  .subtitle {
+     font-size: 32.77px;
+  }
+  .details>div>h1 {
+    font-size: 60px;
+  }
+  .details>div>p {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #disclaimer>h3 {
+    font-size: 3vw;
+  }
+  #disclaimer>p {
+    font-size: 2vw;
+  }
+}
