--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -25,3 +25,30 @@ p {
 .bg-yellow {
 	background-color: #ffcc00!important;
 }
+
+.logo {
+	max-height: 60px;
+}
+
+.navbar-brand {
+	font-weight: bold;
+	font-family: "Harriet";
+	font-style: italic;
+	color: #000000;
+}
+
+.navbar {
+	box-shadow: 0px 1px 18px #00000075;
+}
+
+.bg-yellow {
+	background-color: #ffcc00!important;
+}
+
+.yellowFont {
+  color: #ffcc00;
+}
+
+mark {
+  background-color: #ffcc00;
+}
