wrote tests and added in links

--- a/app/views/info/team.html.erb
+++ b/app/views/info/team.html.erb
@@ -1,6 +1,6 @@
 <h1>Meet the team</h1>
 <div class="bio">
-  <h2>Tad Tobar</h2>
+  <h2 href="https://www.linkedin.com/in/tadtobar/">Tad Tobar</h2>
   Founder & Co-President
   <div class="bio-text">
     Tad is a senior at the Haas School of Business, interested in entrepreneurship and how society 
@@ -9,7 +9,7 @@ to learn about new technology, study finance, and collaborate with others on new
   </div>
 </div>
 <div class="bio">
-  <h2>Patrick Mariolle</h2>
+  <h2 href="https://www.linkedin.com/in/patrick-mariolle-80ab0813b/">Patrick Mariolle</h2>
   Co-President
   <div class="bio-text">
     Patrick is an Oakland native finishing his senior year at the Haas School of Business. Social 
@@ -19,7 +19,7 @@ leverage his education at Haas to create new solutions for systematic problems.
   </div>
 </div>
 <div class="bio">
-  <h2>Thomas Brown</h2>
+	<h2 href="https://www.linkedin.com/in/thomasjfbrown/">Thomas Brown</h2>
   External Vice President
   <div class="bio-text">
     Thomas is a student of the College of Letters and Science studying Political Science with a 
@@ -29,7 +29,7 @@ events, and political advocacy. In his spare time he enjoys local community orga
   </div>
 </div>
 <div class="bio">
-  <h2>JP Pantin</h2>
+  <h2 href = >JP Pantin</h2>
   Internal Vice President
   <div class="bio-text">
     JP is a senior at the Haas School of Business. This past summer he interned at JP Morgan 
@@ -50,7 +50,7 @@ UBS as a Summer Analyst in the Investment Banking Division and will be joining t
   </div>
 </div>
 <div class="bio">
-  <h2>Gresshaa Mehta</h2>
+  <h2 href="https://www.linkedin.com/in/gresshaa">Gresshaa Mehta</h2>
   Vice President of Design
   <div class="bio-text">
     G is a first-generation college student from India, passionate about creating unique experiences
