Add op ed (#26)

--- a/app/views/info/index.html.erb
+++ b/app/views/info/index.html.erb
@@ -3,7 +3,7 @@
     <div class="title">
       <h1 class="maintitle yellowFont">Freedom Shouldn't Be For Sale</h1>
       <hr class="yellowFont">
-      <p class="subtitle yellowFont">We bail people out of jail for free, check out team member Thomas Brown's Op<div class="content-wrapper">
+      <p class="subtitle yellowFont">We bail people out of jail for free, check out team member Thomas Brown's Op-ed<div class="content-wrapper">
     </div>
   </div>
 </div>
