added linkedin link for jp

--- a/app/views/info/team.html.erb
+++ b/app/views/info/team.html.erb
@@ -29,7 +29,7 @@ events, and political advocacy. In his spare time he enjoys local community orga
   </div>
 </div>
 <div class="bio">
-  <h2 href = >JP Pantin</h2>
+  <h2 href = "https://www.linkedin.com/in/jp-pantin-98b560a7/" >JP Pantin</h2>
   Internal Vice President
   <div class="bio-text">
     JP is a senior at the Haas School of Business. This past summer he interned at JP Morgan 
