--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -1,3 +1,3 @@
 Have info about applying for bail.
 
-<%= button_to "Apply for Bail", new_application_path, method: :get %>
+<%= button_to "Apply for Bail", bail_apply_submit_path, method: :get %>
