--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -1,8 +1,8 @@
 Have info about applying for bail.
 
-<%= button_to "Apply for Bail", apply_form_submit_path, method: :get -%>
-<%= form_tag(apply_form_submit_path), :id => 'bail_apply_form' do -%>
+<%= form_tag(apply_form_submit_path, :id => 'apply_form') do -%>
   First Name: <%= text_field_tag(:first_name) %>
   Last Name: <%= text_field_tag(:last_name) %>
 <% end -%>
 
+<%= button_to "Apply for Bail", apply_form_submit_path, :id => 'apply_form', method: :get -%>
