Start designing the form

--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -1,6 +1,6 @@
 Have info about applying for bail.
 
-<%= form_tag(apply_form_submit_path, :id => 'apply_form') do -%>
+<%= form_tag(apply_form_submit_path, :id => 'apply_form', :class => 'form-style-3') do -%>
   First Name: <%= text_field_tag(:first_name) %>
   Last Name: <%= text_field_tag(:last_name) %>
 <% end -%>
