--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -1,8 +1,12 @@
 Have info about applying for bail.
 
 <%= form_tag(apply_form_submit_path, :id => 'apply_form', :class => 'form-style-3') do -%>
-  First Name: <%= text_field_tag(:first_name) %>
-  Last Name: <%= text_field_tag(:last_name) %>
+  <fieldset><legend>Bail Application</legend>
+    <label for="first_name"><span>First Name<span class="required">*</span></span><input type="text" class="input-field" name="first_name" value="" /></label>
+    <label for="first_name"><span>Last Name<span class="required">*</span></span><input type="text" class="input-field" name="last_name" value="" /></label>
+  </fieldset>
+<!--  First Name: <%#= text_field_tag(:first_name) %>-->
+<!--  Last Name: <%#= text_field_tag(:last_name) %>-->
 <% end -%>
 
 <%= button_to "Apply for Bail", apply_form_submit_path, :id => 'apply_form', method: :get -%>
