--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -4,6 +4,7 @@ Have info about applying for bail.
   <fieldset><legend>Bail Application</legend>
     <label for="first_name"><span>First Name<span class="required">*</span></span><input type="text" class="input-field" name="first_name" value="" /></label>
     <label for="first_name"><span>Last Name<span class="required">*</span></span><input type="text" class="input-field" name="last_name" value="" /></label>
+    <label><span> </span><input type="submit" value="Apply for Bail" /></label>
   </fieldset>
 <!--  First Name: <%#= text_field_tag(:first_name) %>-->
 <!--  Last Name: <%#= text_field_tag(:last_name) %>-->
