--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -1,6 +1,6 @@
 Have info about applying for bail.
 
-<%= form_tag(apply_form_submit_path, :id => 'apply_form', :class => 'BailApplicationForm') do -%>
+<%= form_tag({controller: 'apply', action: 'apply_bail'}, :id => 'apply_form', :class => 'BailApplicationForm') do -%>
   <fieldset><legend>Bail Application</legend>
     <label for="first_name">
       <span>First Name
@@ -15,7 +15,8 @@ Have info about applying for bail.
     <label for="email">
       <span>Email
         <span class="required">*</span>
-      </span><input type="email" class="input-field" name="email" value="" />
+      </span>
+      <input type="email" class="input-field" name="email" value="" />
     </label>
     <label><span> </span><input type="submit" value="Apply for Bail" /></label>
   </fieldset>
