--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -1,6 +1,6 @@
 Have info about applying for bail.
 
-<%= form_tag('apply_form_submit', :id => 'apply_form', :class => 'BailApplicationForm') do -%>
+<%= form_tag('apply_form_submbj', :id => 'apply_form', :class => 'BailApplicationForm') do -%>
   <fieldset><legend>Bail Application</legend>
     <label for="first_name">
       <span>First Name<span class="required">*</span></span><input type="text" class="input-field" name="first_name" value="" /></label>
