--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -1,11 +1,12 @@
 Have info about applying for bail.
 
-<%= form_tag(apply_form_submit_path, :id => 'apply_form', :class => 'BailApplicationForm') do -%>
+<%= form_tag('apply#bail_apply', :id => 'apply_form', :class => 'BailApplicationForm') do -%>
   <fieldset><legend>Bail Application</legend>
     <label for="first_name">
       <span>First Name<span class="required">*</span></span><input type="text" class="input-field" name="first_name" value="" /></label>
     <label for="first_name"><span>Last Name<span class="required">*</span></span><input type="text" class="input-field" name="last_name" value="" /></label>
     <label for="email"><span>Email <span class="required">*</span></span><input type="email" class="input-field" name="email" value="" /></label>
+    <label for="selection"><span>Subject</span><select name="selection" class="select-field">
     <label><span> </span><input type="submit" value="Apply for Bail" /></label>
   </fieldset>
 <% end -%>
