--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -8,10 +8,13 @@ Have info about applying for bail.
       </span>
       <input type="text" class="input-field" name="first_name" value="" />
     </label>
-    <label for="first_name"><span>Last Name
+    <label for="last_name"><span>Last Name
       <span class="required">*</span></span>
       <input type="text" class="input-field" name="last_name" value="" />
     </label>
+    <input type="radio" name="gender" value="male"> Male<br>
+    <input type="radio" name="gender" value="female"> Female<br>
+    <input type="radio" name="gender" value="other"> Other<br>
     <label for="email"><span>Email
       <span class="required">*</span></span>
       <input type="email" class="input-field" name="email" value="" />
