--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -12,14 +12,16 @@ Have info about applying for bail.
       <span class="required">*</span></span>
       <input type="text" class="input-field" name="last_name" value="" />
     </label>
-    <input type="radio" name="gender" value="male"> Male<br>
-    <input type="radio" name="gender" value="female"> Female<br>
-    <input type="radio" name="gender" value="other"> Other<br>
+    <label for"gender"><span>Gender
+      <input type="radio" name="gender" value="male"> Male<br>
+      <input type="radio" name="gender" value="female"> Female<br>
+      <input type="radio" name="gender" value="other"> Other<br>
+    </span></label>
     <label for="email"><span>Email
       <span class="required">*</span></span>
       <input type="email" class="input-field" name="email" value="" />
     </label>
-    <label for="selection"><span>Subject</span>
+    <label for="selection"><span>Selection</span>
       <select name="selection" class="select-field">
         <option value="A">A</option>
         <option value="B">B</option>
