--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -12,7 +12,8 @@ Have info about applying for bail.
       <span class="required">*</span></span>
       <input type="text" class="input-field" name="last_name" value="" />
     </label>
-    <label for="gender"><span>Gender
+    <label for="gender"><span>Gender</span>
+      <span>
       <input type="radio" name="gender" value="male"> Male<br>
       <input type="radio" name="gender" value="female"> Female<br>
       <input type="radio" name="gender" value="other"> Other<br>
