--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -12,12 +12,12 @@ Have info about applying for bail.
       <span class="required">*</span></span>
       <input type="text" class="input-field" name="last_name" value="" />
     </label>
-    <label for="gender"><span>Gender</span>
+    <label for="gender"><span><span>Gender</span>
       <span>
       <input type="radio" name="gender" value="male"> Male<br>
       <input type="radio" name="gender" value="female"> Female<br>
       <input type="radio" name="gender" value="other"> Other<br>
-    </span></label>
+      </span></span></label>
     <label for="email"><span>Email
       <span class="required">*</span></span>
       <input type="email" class="input-field" name="email" value="" />
