--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -17,7 +17,7 @@ Have info about applying for bail.
       <input type="radio" name="gender" value="male"> Male<br>
       <input type="radio" name="gender" value="female"> Female<br>
       <input type="radio" name="gender" value="other"> Other<br>
-      </span><br></label><br>
+      </span><br><br></label>
     <label for="email"><span>Email
       <span class="required">*</span></span>
       <input type="email" class="input-field" name="email" value="" />
