added link for Zhen Teo

--- a/app/views/info/team.html.erb
+++ b/app/views/info/team.html.erb
@@ -38,7 +38,7 @@ start his full-time career. JP is interested in finance, entrepreneurship, and s
 projects. He hopes to one day found both his own company and foundation.  </div>
 </div>
 <div class="bio">
-  <a class="h2">Zhen Teo</a>
+  <a class="h2" href = "https://linkedin.com/in/zhenrenteo/">Zhen Teo</a>
   Vice President of Fundraising
   <div class="bio-text">
     Zhen is an outgoing and ambitious individual who strives to collaborate with genuine people.
