--- a/app/assets/stylesheets/donate.scss
+++ b/app/assets/stylesheets/donate.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the Donate controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.headerTop {
+  font-size: 1.2rem;
+  margin-top: 2rem;
+  height: 2.4rem;
+}
+
+div strong {
+    display: block;
+    height: 1px;
+    width: 100px;
+    background: #000000;
+    z-index:-1;
+    margin-top: 15px;
+    margin-left: 0%;
+}
+
+.donateAbout {
+  margin-top: 1%;
+  margin-left: 5%;
+  margin-right: 5%;
+  width: 40%;
+}
+
+.bg-secondary {
+  background-color: #003161!important;
+}
