Flash notice and redirect (#31)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -34,8 +34,7 @@
   pointer-events:none;
 }
 
-.login-notice, .login-alert {
-  background: rosybrown;
+.notice, .login-alert {
   margin: 1em 0;
-  padding: 4px;
+  padding-left: 5%;
 }
