--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
       </div>
     </nav>
     <% if notice %>
-      <p class="login-notice"><%= notice %></p>
+      <p class="notice"><%= notice %></p>
     <% end %>
     <% if alert %>
       <p class="login-alert"><%= alert %></p>
